reduce amount of network/JIRA interaction